# Distributed

./: .gitignore  config.json  readme.md  test.py
client/: Cargo.toml
distributed/: __init__.py  deco.py  enums.py  funcs.py  interals.py  models.py  states.py  utils.py
main/: Cargo.toml
server/: Cargo.toml
worker/: Cargo.toml
worker/src/: main.rs
