[package]
name = "worker"
version = "0.1.0"
authors = ["Prunoideae <a455167189@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pyo3 = "0.12.1"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
